Fixed info box not aligned correctly and page not wide enough on large screens

--- a/searx-instance/theme/src/sass/light/search/results/default.sass
+++ b/searx-instance/theme/src/sass/light/search/results/default.sass
@@ -30,7 +30,9 @@
         background-repeat: no-repeat
         background-position: center
         //width: 70%
-        height: 100%
+        width: 100%
+        aspect-ratio: 1
+        border-radius: $border-radius
 
       .highlight *
         font-weight: bold
