--- a/searx-instance/theme/src/sass/light/search/sidebar/infobox.sass
+++ b/searx-instance/theme/src/sass/light/search/sidebar/infobox.sass
@@ -1,4 +1,7 @@
 .infobox
+  &:not(:only-of-type)
+    &:not(:last-of-type)
+      margin-bottom: $spacing1
   max-width: $boxes-max-width
   .infobox-url 
     a 
